fix: fix spacing in CheckboxGroup and RadioGroup

--- a/styles/components/main/CheckboxGroup.scss
+++ b/styles/components/main/CheckboxGroup.scss
@@ -19,7 +19,10 @@
       overflow: scroll;
       li {
         display: flex;
-        margin-bottom: 12px;
+        margin-bottom: 18px;
+        &:last-child {
+          margin-bottom: 0;
+        }
         & > span {
           margin-left: 12px;
         }
